# fprime-examples

./: .gitmodules  README.md
.github/workflows/: ut-flight-examples.yml
FlightExamples/: .gitignore  Dockerfile  project.cmake  requirements.txt
FlightExamples/CustomFraming/: CMakeLists.txt  README.md
FlightExamples/CustomFraming/DecafDeframer/: CMakeLists.txt  DecafDeframer.cpp  DecafDeframer.fpp  DecafDeframer.hpp
FlightExamples/CustomFraming/DecafDeframer/docs/: sdd.md
FlightExamples/CustomFraming/DecafDeframer/test/ut/: DecafDeframerTestMain.cpp  DecafDeframerTester.cpp  DecafDeframerTester.hpp
FlightExamples/CustomFraming/DecafFrameDetector/: CMakeLists.txt  DecafFrameDetector.cpp  DecafFrameDetector.hpp
FlightExamples/CustomFraming/DecafFramer/: CMakeLists.txt  DecafFramer.cpp  DecafFramer.fpp  DecafFramer.hpp
FlightExamples/CustomFraming/DecafFramer/docs/: sdd.md
FlightExamples/CustomFraming/DecafFramer/test/ut/: DecafFramerTestMain.cpp  DecafFramerTester.cpp  DecafFramerTester.hpp
FlightExamples/CustomFraming/Subtopology/: ExternalLibsSubtopology-noOpenCV.fpp  ExternalLibsTopologyDefs.hpp
FlightExamples/CustomFraming/Types/: CMakeLists.txt  Types.fpp
FlightExamples/DataProduct/: CMakeLists.txt  README.md
FlightExamples/DataProduct/Producer/: CMakeLists.txt  Producer.cpp  Producer.fpp  Producer.hpp
FlightExamples/DataProduct/Producer/docs/: sdd.md
FlightExamples/DataProduct/Producer/test/ut/: ProducerTestMain.cpp  ProducerTester.cpp  ProducerTester.hpp
FlightExamples/DataProducts/: CMakeLists.txt
FlightExamples/DataProducts/Producer/: Producer.cpp  Producer.fpp  Producer.hpp
FlightExamples/DataProducts/Producer/docs/: sdd.md
FlightExamples/DataProducts/Producer/test/ut/: ProducerTestMain.cpp  ProducerTester.cpp  ProducerTester.hpp
FlightExamples/ExamplesDeployment/: CMakeLists.txt  Main.cpp  README.md  fprime-gds.yml
FlightExamples/ExamplesDeployment/ExampleCdhCoreConfig/: CMakeLists.txt  CdhCoreTlmConfig.fpp
FlightExamples/ExamplesDeployment/GroundChannels/: GroundDefinedChannelsDictionary.json
FlightExamples/ExamplesDeployment/Sine/: CMakeLists.txt  Sine.cpp  Sine.fpp  Sine.hpp
FlightExamples/ExamplesDeployment/Sine/docs/: sdd.md
FlightExamples/ExamplesDeployment/Top/: CMakeLists.txt  ExamplesDeploymentPackets.fppi  ExamplesDeploymentTopology.cpp  ExamplesDeploymentTopology.hpp  ExamplesDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
FlightExamples/ExternalLibraryIntegration/: CMakeLists.txt  pattern-sdd.md
FlightExamples/ExternalLibraryIntegration/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.fpp  ImageProcessor.hpp
FlightExamples/ExternalLibraryIntegration/ImageProcessor/docs/: sdd.md
FlightExamples/ExternalLibraryIntegration/ImageProcessor/test/ut/: ImageProcessorTestMain.cpp  ImageProcessorTester.cpp  ImageProcessorTester.hpp
FlightExamples/ExternalLibraryIntegration/OpenCvWrapper/: CMakeLists.txt  OpenCvWrapper.cpp  OpenCvWrapper.fpp  OpenCvWrapper.hpp
FlightExamples/ExternalLibraryIntegration/OpenCvWrapper/docs/: sdd.md
FlightExamples/ExternalLibraryIntegration/OpenSslWrapper/: CMakeLists.txt  OpenSslWrapper.cpp  OpenSslWrapper.fpp  OpenSslWrapper.hpp
FlightExamples/ExternalLibraryIntegration/OpenSslWrapper/docs/: sdd.md
FlightExamples/ExternalLibraryIntegration/OpenSslWrapper/test/ut/: OpenSslWrapperTestMain.cpp  OpenSslWrapperTester.cpp  OpenSslWrapperTester.hpp
FlightExamples/ExternalLibraryIntegration/Types/: CMakeLists.txt  CryptoTypes.fpp  OpenCvTypes.fpp
FlightExamples/ExternalLibs/: CMakeLists.txt
FlightExamples/ExternalLibs/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.fpp  ImageProcessor.hpp
FlightExamples/ExternalLibs/ImageProcessor/docs/: sdd.md
FlightExamples/ExternalLibs/ImageProcessor/test/ut/: ImageProcessorTestMain.cpp  ImageProcessorTester.cpp  ImageProcessorTester.hpp
FlightExamples/ExternalLibs/OpenSslWrapper/: CMakeLists.txt  OpenSslWrapper.cpp  OpenSslWrapper.fpp  OpenSslWrapper.hpp
FlightExamples/ExternalLibs/OpenSslWrapper/docs/: sdd.md
FlightExamples/ExternalLibs/OpenSslWrapper/test/ut/: OpenSslWrapperTestMain.cpp  OpenSslWrapperTester.cpp  OpenSslWrapperTester.hpp
FlightExamples/ExternalLibs/Subtopology/: CMakeLists.txt  ExternalLibsSubtopology-empty.fpp  ExternalLibsSubtopology-noOpenCV.fpp  ExternalLibsSubtopology-withOpenCV.fpp  ExternalLibsTopologyDefs.hpp
FlightExamples/ExternalLibs/Subtopology/ExternalLibsConfig/: CMakeLists.txt  ExternalLibsConfig.fpp
FlightExamples/ExternalLibs/Types/: CMakeLists.txt  CryptoTypes.fpp  OpenCvTypes.fpp
FlightExamples/ManagerWorker/: CMakeLists.txt  README.md
FlightExamples/ManagerWorker/Manager/: Manager.fpp  Manager.hpp
FlightExamples/ManagerWorker/Manager/docs/: sdd.md
FlightExamples/ManagerWorker/Manager/test/ut/: ManagerTester.cpp
FlightExamples/ManagerWorker/Subtopology/: CMakeLists.txt  ManagerWorkerTopologyDefs.hpp
FlightExamples/ManagerWorker/Subtopology/ManagerWorkerConfig/: CMakeLists.txt  ManagerWorkerConfig.fpp
FlightExamples/ManagerWorker/Worker/: Worker.hpp
FlightExamples/ManagerWorker/Worker/test/ut/: WorkerTester.cpp
FlightExamples/SubtopologyConfigs/: CMakeLists.txt  ExternalLibsConfig.fpp
GdsExamples/gds-plugins/: .gitignore  pyproject.toml
GdsExamples/gds-plugins/src/framing/: decaf_framing.py
GdsExamples/gds-plugins/src/ground_channels/: README.md  cosine.py
